anna (1.09) UNRELEASED; urgency=low

  * Colin Watson
    - Fix typo in "unknown udeb" error message.

 -- Colin Watson <cjwatson@debian.org>  Tue, 10 May 2005 20:59:32 +0100

anna (1.08) unstable; urgency=low

  * Colin Watson
    - Fix log message when installing a package due to the anna-install
      queue.
    - Install kernel module udebs if the name they provide is queued, so
      that 'anna-install ext2-modules' works as expected.
    - Add anna/standard_modules question (never asked, only for preseeding).
      If false, udebs will not be automatically installed merely due to
      having Priority >= standard, although Priority >= standard kernel
      modules will still be installed. Originally Ubuntu bug #5258.
  * Updated translations:
    - Greek, Modern (1453-) (el.po) by Greek Translation Team

 -- Colin Watson <cjwatson@debian.org>  Thu,  5 May 2005 16:22:49 +0100

anna (1.07) unstable; urgency=low

  * Not for sarge.
  * Joey Hess
    - Removed load-installer udeb, since it's no longer used, having been
      replaced by download-installer, etc.
    - Removed code in anna to present a list of retreivers. Now anna must
      always be run with an argument. Closes: #216084, #218774
    - Also removed template for this question.
    - Removed code to notice new retreivers and exit specially, since
      that was only needed in old style calling method.
    - Stop using debconf db transiently to store the retreiver to use.
    - Various code cleanups.
    - Remove test-anna ifdefed code that was so old it didn't work.
    - Remove some defines that were to support libd-i v3.
    - Split out retreiver interface code into its own file and cleaned up
      the function names for consistency.
    - Move anna binary from /usr/bin to /bin.
    - The state machine in anna's main is overkill, since there is now only
      one question asked, so remove it. Closes: #222500
    - Store default retriever in debconf db if ran like