@@ -353,6 +353,32 @@ OUT:
 	return ret;
 }
 
+char *subarch_get (void) {
+        FILE *a; 
+        char buf[255], *s, *end;
+
+        if (! (a = popen("./archdetect", "r"))) {
+                return "generic";
+        }
+        if (! fgets(buf, sizeof(buf), a)) {
+                pclose(a);
+                return "generic";
+        }
+        pclose(a);
+	s = strdup(buf);
+
+        if (! (s=strchr(s, '/'))) {
+                return "generic";
+        }
+	s++;
+
+        if ((end = strchr(s, '\n'))) {
+                end[0] = '\0';
+        }
+
+        return s;
+}
+
 int main(int argc, char **argv) {
 	int ret;
 	di_packages *packages, *status;
@@ -364,13 +390,8 @@ int main(int argc, char **argv) {
 
 	di_system_init("anna");
 
-	if (debconf_get(debconf, "debian-installer/kernel/subarchitecture")) {
-		subarchitecture = strdup("generic");
-	}
-	else {
-		subarchitecture = strdup(debconf->value);
-	}
-
+	subarchitecture = subarch_get();
+	
 	if (uname(&uts) == 0) {
 		running_kernel = strdup(uts.release);
 	}
