@@ -2,6 +2,9 @@ anna (1.09) UNRELEASED; urgency=low
 
   * Colin Watson
     - Fix typo in "unknown udeb" error message.
+  * Joey Hess
+    - Switch from using the debconf template to get the subarch, to running
+      the archdetect command.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 10 May 2005 20:59:32 +0100
 
